# casper-sidecar

./: Cargo.toml
event_sidecar/: Cargo.toml
event_sidecar/src/: admin_server.rs  event_handling_service.rs  event_stream_server.rs  lib.rs  tests.rs
event_sidecar/src/database/: migration_manager.rs  postgresql_database.rs  sqlite_database.rs
event_sidecar/src/event_handling_service/: db_saving_event_handling_service.rs
event_sidecar/src/event_stream_server/: config.rs  event_indexer.rs  http_server.rs  sse_server.rs  tests.rs
event_sidecar/src/rest_server/: errors.rs  filters.rs  openapi.rs
event_sidecar/src/rest_server/openapi/: schema_transformation_visitor.rs
event_sidecar/src/testing/: fake_database.rs  fake_event_stream.rs  mock_node.rs  shared.rs  simple_sse_server.rs  testing_config.rs
event_sidecar/src/tests/: integration_tests.rs  performance_tests.rs
event_sidecar/src/types/: config.rs
json_rpc/: Cargo.toml
json_rpc/src/: error.rs  filters.rs  lib.rs  rejections.rs  request_handlers.rs
json_rpc/src/filters/tests/: base_filter_with_recovery_tests.rs  main_filter_with_recovery_tests.rs
listener/: Cargo.toml
listener/src/: sse_connector.rs
metrics/src/: rpc.rs
rpc_sidecar/: Cargo.toml
rpc_sidecar/src/: config.rs  http_server.rs  lib.rs  node_client.rs  rpcs.rs  speculative_exec_config.rs  speculative_exec_server.rs
rpc_sidecar/src/rpcs/: account.rs  common.rs  state.rs
rpc_sidecar/src/testing/: mod.rs
sidecar/: Cargo.toml
sidecar/src/: config.rs
types/: Cargo.toml
types/src/legacy_sse_data/: mod.rs  translate_block_added.rs  translate_execution_result.rs
