[package]
name = "casper-json-rpc"
version = "1.1.0"
authors = ["Fraser Hutchison <fraser@casperlabs.io>"]
edition = "2018"
description = "A library suitable for use as the framework for a JSON-RPC server."
readme = "README.md"
documentation = "https://docs.rs/casper-json-rpc"
homepage = "https://casperlabs.io"
repository = "https://github.com/casper-network/casper-node/tree/master/json_rpc"
license = "Apache-2.0"

[dependencies]
bytes = "1.10"
datasize = { workspace = true }
futures = { workspace = true }
governor = "0.8"
http = "0.2"
itertools = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true, default-features = true, features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tracing = { workspace = true, default-features = true }
warp = { workspace = true }

[dev-dependencies]
env_logger = "0"
hyper = "0.14.32"
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "test-util",
] }
