[package]
name = "casper-event-listener"
version = "1.0.0"
edition = "2021"
description = "Event listener for casper-event-listener library"
license-file = "../LICENSE"
documentation = "README.md"
homepage = "https://github.com/casper-network/casper-sidecar/"
repository = "https://github.com/casper-network/casper-sidecar/"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
bytes = "1.10"
casper-event-types.workspace = true
casper-types = { workspace = true, features = ["std"] }
eventsource-stream = "0.2"
futures = { workspace = true }
futures-util = { workspace = true }
metrics = { workspace = true }
once_cell = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1.0"
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
tracing = { workspace = true, default-features = true }
url = "2.5"

[dev-dependencies]
casper-event-types = { workspace = true, features = ["sse-data-testing"] }
eventsource-stream = "0.2"
mockito = "1.2"
portpicker = "0.1"
warp = { workspace = true }
