[package]
name = "casper-event-types"
version = "1.0.0"
edition = "2021"
description = "Types for casper-event-listener library"
license-file = "../LICENSE"
documentation = "README.md"
homepage = "https://github.com/casper-network/casper-sidecar/"
repository = "https://github.com/casper-network/casper-sidecar/"

[dependencies]
blake2 = { version = "0.10", optional = true }
casper-types = { workspace = true, features = ["std"] }
mockall = "0.13"
once_cell = { workspace = true }
pretty_assertions = "1.4"
rand = { version = "0.8", optional = true }
serde = { workspace = true, default-features = true, features = [
    "derive",
    "rc",
] }
serde_json = { version = "1.0", default-features = false, features = [
    "alloc",
    "raw_value",
] }
thiserror = { workspace = true }

[features]
sse-data-testing = ["blake2", "casper-types/testing", "rand"]
additional-metrics = []

[dev-dependencies]
casper-types = { workspace = true, features = ["std", "testing"] }
rand = "0.8"
